# loan-payment-calculator

./: Dockerfile  Makefile  README.md  loan_payment_calculator.sh  pyproject.toml
loan_payment_calculator/: __init__.py  calculate.py
tests/: test_loan_payment_calculator.py
