[tool.poetry]
name = "loan_payment_calculator"
version = "0.1.0"
description = ""
authors = ["Joey Stevens <joey.stevens00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
# command_name = module_for_handler : function_for_handler
loan_payment_calculator = "loan_payment_calculator:cli"
